istio/canary-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: canary-virtualservice
  namespace: dos-game
spec:
  hosts:
  - "*"
  gateways:
  - dos-games-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: stats-api-service
        port:
          number: 3001
    timeout: 30s
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: game-service
        subset: $CURRENT_GAME
        port:
          number: 80
      weight: $CURRENT_WEIGHT
    - destination:
        host: game-service
        subset: $NEW_GAME
        port:
          number: 80
      weight: $NEW_WEIGHT
    timeout: 30s
